--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a senior mathematics student at Cornell University with a strong interest in geometric analysis, partial differential equations, and their applications. My research experience spans differential geometry, Bayesian networks, and mathematical modeling.</p>
-        
+        <p>I am a senior mathematics student at Cornell University with a strong interest in geometric analysis.
         <div class="research-interests">
             <h3>Research Interests</h3>
             <ul>
