--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a senior mathematics student at Cornell University with a strong interest in geometric analysis.
+        <p>I am a senior mathematics student at Cornell University with a strong interest in geometric analysis and related subjects.
         <div class="research-interests">
-            <h3>Research Interests</h3>
+            <h3>Interests</h3>
             <ul>
                 <li>Riemannian Geometry</li>
                 <li>PDE</li>
