Add topics to the list in index.html

--- a/index.html
+++ b/index.html
@@ -156,6 +156,8 @@
                 <li>Riemannian Geometry</li>
                 <li>PDE</li>
                 <li>Geometric Analysis</li>
+                <li>Differential Topology</li>
+                <li>Lie Groups and Lie Symmetries</li>
             </ul>
         </div>
     </section>
