--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     
     <section id="about">
         <h2>About Me</h2>
-        <p>I am a senior mathematics student at Cornell University with a strong interest in geometric analysis and related subjects.
+        <p>I am a senior mathematics student at Cornell University.
         <div class="research-interests">
             <h3>Interests</h3>
             <ul>
