--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <section id="links">
         <h2>Links & Resources</h2>
         <div class="links">
-            <a href="main.pdf" class="btn btn-primary">CV (PDF)</a>
+            <a href="ziyang_cv.pdf" class="btn btn-primary">CV (PDF)</a>
         </div>
     </section>
 </body>
