morse theory notes and lie theory notes

--- a/index.html
+++ b/index.html
@@ -166,9 +166,11 @@
     </section>
     
     <section id="links">
-        <h2>Links & Resources</h2>
+        <h2>My...</h2>
         <div class="links">
-            <a href="ziyang_cv.pdf" class="btn btn-primary">CV (PDF)</a>
+            <a href="ziyang_cv.pdf" class="btn btn-primary"> CV (PDF)</a>
+            <a href="ziyang_mt.pdf" class="btn btn-primary"> Notes on Morse Theory (PDF)</a>
+            <a href="ziyang_lt+rf.pdf" class="btn btn-primary"> Notes on Lie Algebra & Ricci Flow (PDF)</a>
         </div>
     </section>
 </body>
