add supervised reading reports, revised fary milnor, drp notes

--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
             <a href="ziyang_cv.pdf" class="btn btn-primary"> CV (PDF)</a>
             <a href="ziyang_mt.pdf" class="btn btn-primary"> Notes on Morse Theory (PDF)</a>
             <a href="ziyang_lt+rf.pdf" class="btn btn-primary"> Notes on Lie Algebra & Ricci Flow (PDF)</a>
+            <a href="ziyang_ii.pdf" class="btn btn-primary"> 2025 Spring Supervised Reading Report</a>
+            <a href="ziyang_fm.pdf" class="btn btn-primary"> 2024 Fall Supervised Reading Report</a>
+            <a href="ziyang_fm_r.pdf" class="btn btn-primary"> Revised 2024 Fall Report: Fary Milnor Theorem</a>
+            <a href="ziyang_drp.pdf" class="btn btn-primary"> 2024 Fall DRP Presentation Notes</a>
         </div>
     </section>
 </body>
